add download page
Signed-off-by: T-Sen <hello@coderos.dev>

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -13,6 +13,6 @@ T-Sen:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/CodeROS-Dev"
-    - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/t-sen"
+#    - label: "Twitter"
+#      icon: "fab fa-fw fa-twitter-square"
+#      url: "https://twitter.com/t-sen"
