--- a/_config.yml
+++ b/_config.yml
@@ -78,7 +78,7 @@ social:
 analytics:
   provider               : "google-universal" # false (default), "google", "google-universal", "google-gtag", "custom"
   google:
-    tracking_id          : "G-LD4RJ9Y0ZQ" # Replace this with your ID, or delete
+    tracking_id          : "UA-217285897-1" # Replace this with your ID, or delete
     anonymize_ip         : true
 
 
